# web3-authn-contract

./: .gitignore  Cargo.toml  README.md  deploy-dev.sh  deploy.sh  env.example  justfile  upgrade-dev.sh  upgrade.sh
docs/: api.md  differences.md  limits.md  registration-griefing.md  vrf_challenges.md  zk-webauthn-comparison.md
migration/: Cargo.toml  README.md  env.example
migration/src/: main.rs  migration_manager.rs  near_client.rs  v4_to_v5.rs  v5_to_v6.rs
scripts/: migrate-v4-to-v5.sh
src/: admin.rs  authenticators.rs  contract_state.rs  lib.rs  link_device.rs  verify_authentication_response.rs  verify_registration_response.rs
src/utils/: p256_utils.rs  parsers.rs  validation.rs
tests/: init_test.rs  test_device_linking_cleanup.rs  test_device_numbers.rs  test_e2e_create_account_and_verify.rs  test_e2e_vrf_authentication.rs  test_unit_admin.rs  test_unit_vrf_contract_verifier.rs  utils_contracts.rs  utils_mocks.rs
web3-authn-contract/: Cargo.toml  env.example
web3-authn-contract/scripts/: README.md  deploy-dev.sh  deploy.sh  upgrade-dev.sh  upgrade.sh
web3-authn-contract/src/: admin.rs  authenticators.rs  contract_state.rs  lib.rs  link_device.rs  types.rs  verify_authentication_response.rs  verify_registration_response.rs
web3-authn-contract/src/migrations/: mod.rs  v4_to_v5.rs  v5_to_v6.rs
web3-authn-contract/src/utils/: mod.rs  p256_utils.rs  parsers.rs  validation.rs  verifiers.rs
web3-authn-contract/src/utils/vrf_verifier/: mod.rs
web3-authn-contract/tests/: init_test.rs  migration_test_v4_to_v5.rs  test_device_linking_cleanup.rs  test_device_numbers.rs  test_e2e_create_account_and_verify.rs  test_e2e_vrf_authentication.rs  test_remove_authenticator.rs  test_unit_admin.rs  utils_contracts.rs  utils_mocks.rs
