[workspace]
resolver = "2"
members = [
    "web3-authn-contract",
    "migration"
]

[profile.release]
codegen-units = 1
# opt-level = "z"
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing"] }
near-workspaces = { version = "0.20.1", features = ["unstable"] }
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
