[package]
name = "migration"
version = "0.4.0"
edition = "2021"

[dependencies]
near-sdk = { workspace = true }
near-api = "0.6.1"
near-crypto = "0.30.3"

anyhow = "1.0"
borsh = "0.10"
borsh-derive = "0.10"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"